# cyberteam

./: .gitignore  AGENTS.md
00_cyberteam搭建/Output/cyberteam-desktop/src-tauri/: Cargo.toml  tauri.conf.json
00_cyberteam搭建/Output/cyberteam-v4/: .gitignore  ARCHITECTURE.md  CHANGELOG.md  DEVELOPMENT.md  Dockerfile  README.md  SPEC.md  demo 2.sh  docker-compose.yml  install_test.sh  pyproject 2.toml  pyproject.toml  swarm_orchestrator.py
00_cyberteam搭建/Output/cyberteam-v4/.github/: POLICY.md
00_cyberteam搭建/Output/cyberteam-v4/CEO总指挥/: AGENT.md
00_cyberteam搭建/Output/cyberteam-v4/Plan/: MAGIC_TECH_SPEC.md  V4核心引擎架构设计.md  V4组织架构执行计划.md
00_cyberteam搭建/Output/cyberteam-v4/SKILLS/: ops
00_cyberteam搭建/Output/cyberteam-v4/agents/: README.md
00_cyberteam搭建/Output/cyberteam-v4/backend/: Dockerfile  README.md  cyberteam.db.backup_20260331_101601  requirements.txt
00_cyberteam搭建/Output/cyberteam-v4/config/: deployment.yaml
00_cyberteam搭建/Output/cyberteam-v4/cyberteam/: __init__.py  __main__.py  _version.py  config.py  constants 2.py  dependencies 2.py  dependencies.py  identity.py  timefmt.py
00_cyberteam搭建/Output/cyberteam-v4/docs/: 07-运营资产融合映射方案 2.md  07-运营资产融合映射方案.md  08-运营资产深度融合方案.md  09-增长BG验证报告 2.md  10-其他BG融合方案.md  11-完整融合执行方案 2.md  12-融合完成验证报告.md  13-深度融合修复方案 2.md  14-目录结构解析 2.md  5HOUR_SELF_EVOLUTION.md  ARCHITECTURE-REVIEW.md  ARCHITECTURE.md  CI_CD_GUIDE.md  CONTRACT-AUDIT-SYSTEMS-MANAGEMENT.md  FUSION_AUDIT_80_ROUNDS.md  FUSION_AUDIT_80_ROUNDS_V2.md  FUSION_PLAN.md  FUSION_REPORT.md  INTEGRATION-AUDIT-REPORT.md  REFACTORING-PLAN.md  ROUTING-SOURCE-OF-TRUTH.md  THINKING-INJECTOR-ARCHITECTURE.md  UPGRADE_STRATEGY 2.md  github_stars_211-240轮验证_gstack与agency深度分析 2.md  github_stars_241-270轮验证_内容生成与知识管理深度分析.md  github_stars_Skills生态深度分析.md  github_stars自我进化最终报告_271-300轮 2.md  github_stars自我进化验证报告_完整版.md  github_stars自我进化验证报告_最终版.md  github_stars自我进化验证报告_第2批 2.md  web-access-integration.md  电商评论情感分析技术方案.md  电商评论情感分析技术方案_详细设计 2.md  融合架构设计文档_v1.0.md
00_cyberteam搭建/Output/cyberteam-v4/engine/: __init__.py  agent_compiler.py  ceo.py  department.py  launcher.py  rbac.py  state_machine.py
00_cyberteam搭建/Output/cyberteam-v4/frontend/: README.md  index 4.html  package.json  pnpm-lock 2.yaml  pnpm-lock.yaml  serve.js  team-builder.html  tsconfig.app.json  vite.config.ts
00_cyberteam搭建/Output/cyberteam-v4/integration/: __init__ 2.py  __init__.py  clawteam_adapter.py  cyberteam_adapter 2.py  cyberteam_adapter.py
00_cyberteam搭建/Output/cyberteam-v4/k8s/: deployment 2.yaml
00_cyberteam搭建/Output/cyberteam-v4/projects/: README.md
00_cyberteam搭建/Output/cyberteam-v4/scripts/: deploy 2.sh  upgrade_check 2.sh
00_cyberteam搭建/Output/cyberteam-v4/shared/: README 2.md
00_cyberteam搭建/Output/cyberteam-v4/skills/: README.md
00_cyberteam搭建/Output/cyberteam-v4/spawn/: __init__.py  registry.py  tmux_backend.py
00_cyberteam搭建/Output/cyberteam-v4/team/: __init__.py  mailbox.py  models.py  tasks.py
00_cyberteam搭建/Output/cyberteam-v4/tests/: conftest 2.py  run_tests.py  test_agent_api 2.py  test_approval_gate 2.py  test_company_api 2.py  test_company_model 2.py  test_core 2.py  test_core.py  test_cyberteam_core.py  test_expert_agent_registry 2.py  test_handoff 2.py  test_integration 2.py  test_mcp_sessions 2.py  test_sessions_spawn 2.py  test_skill_api 2.py  test_skill_persistence 2.py  test_spawn_permissions 2.py  test_state_machine 2.py  test_task_scheduler 2.py  test_teams_api 2.py  test_thinking_injector 2.py  test_thinking_injector.py  test_todo_app.py  (+1 more)
(+15712 files in other folders)
