[package]
name = "cyberteam-desktop"
version = "1.0.0"
description = "CyberTeam Desktop - AI Agent Collaboration Platform"
authors = ["CyberTeam"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
